--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
     "nuxt": "^2.0.0",
+    "nuxt-env": "^0.1.0",
     "vue-toasted": "^1.1.28"
   },
   "devDependencies": {
