--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,8 +17,8 @@ services:
   web:
     build:
       context: web/.
-      args:
-        BUILD_TYPE: docker
+      # args:
+      #   BUILD_TYPE: docker
     ports:
       - "3000:80"
     depends_on:
@@ -26,8 +26,8 @@ services:
     links:
       - hydra
     environment:
-      - HYDRA_ADMIN_URL=http://hydra:4445
-      - PUBLIC_URL=http://hydra:4444
+      # - HYDRA_ADMIN_URL=http://hydra:4445
+      # - PUBLIC_URL=http://hydra:4444
       - API_URL=http://hydra:4445
 
   hydra-migrate:
