--- a/web/.env.example
+++ b/web/.env.example
@@ -2,5 +2,5 @@ MODE=development
 PORT=3000
 BASE_URL=http://localhost:3000
 
-PROXY_URL=http://pulsar.staging.pandio.com
-HYDRA_PROXY_URL=http://localhost:
+PROXY_URL=http://localhost:4445
+HYDRA_PROXY_URL=http://localhost:4445
