Updated readme, added docker files, UI improvements

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -61,11 +61,25 @@ services:
       - SECRETS_SYSTEM=youReallyNeedToChangeThis
       - OIDC_SUBJECT_IDENTIFIERS_SUPPORTED_TYPES=public,pairwise
       - OIDC_SUBJECT_IDENTIFIERS_PAIRWISE_SALT=youReallyNeedToChangeThis
-      # - URLS_CONSENT=http://127.0.0.1:3000/consent
-      # - URLS_LOGIN=http://127.0.0.1:3000/login
-      # - URLS_LOGOUT=http://127.0.0.1:3000/logout
+      - URLS_CONSENT=http://127.0.0.1:3000/consent
+      - URLS_LOGIN=http://127.0.0.1:3000/login
+      - URLS_LOGOUT=http://127.0.0.1:3000/logout
     command:
+      # serve -c /etc/config/hydra/hydra.yml all --dangerous-force-http
       serve all --dangerous-force-http
+    # volumes:
+    #   -
+    #     type: bind
+    #     source: ./hydraConfig
+    #     target: /etc/config/hydra
+
+  consent:
+    environment:
+      - HYDRA_ADMIN_URL=http://hydra:4445
+    image: oryd/hydra-login-consent-node:v1.3.2
+    ports:
+      - "3000:3000"
+    restart: unless-stopped
 
 #
 # volumes:
@@ -76,3 +90,19 @@ services:
 
 # networks:
 #   new:
+
+  # server:
+    # image: gitea/gitea:1.13.3
+    # container_name: gitea
+    # environment:
+    #   - USER_UID=1000
+    #   - USER_GID=1000
+    # restart: always
+    # volumes:
+    #   - ./gitea:/data
+    #   - /etc/timezone:/etc/timezone:ro
+    #   - /etc/localtime:/etc/localtime:ro
+    # ports:
+    #   - "3001:3000"
+    #   - "222:22"
+
